last jam 9 malam

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,21 +53,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.389" />
 
-    <EditText
-        android:id="@+id/textView6"
+    <TextView
+        android:id="@+id/idreg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bReg"
         android:textColor="@color/teal_200"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.748"
+        app:layout_constraintHorizontal_bias="0.747"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.852" />
+        app:layout_constraintVertical_bias="0.845" />
 
     <Button
-        android:id="@+id/btReg"
+        android:id="@+id/btRegis"
         android:layout_width="246dp"
         android:layout_height="42dp"
         android:layout_marginLeft="16dp"
