--- a/app/src/main/res/layout/halamankedua.xml
+++ b/app/src/main/res/layout/halamankedua.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
 
-    <EditText
+    <TextView
         android:id="@+id/textReg"
         android:layout_width="108dp"
         android:layout_height="60dp"
@@ -124,7 +124,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.67" />
+        app:layout_constraintVertical_bias="0.67"/>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/tvPassword"
@@ -148,7 +148,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintVertical_bias="0.551"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
