--- a/app/src/main/res/layout/taskhasil.xml
+++ b/app/src/main/res/layout/taskhasil.xml
@@ -9,12 +9,13 @@
     tools:context=".TaskHasil">
 
     <TextView
-        android:id="@+id/eMT"
+        android:id="@+id/eMT2"
         android:layout_width="409dp"
         android:layout_height="55dp"
         android:layout_marginBottom="488dp"
         android:background="@color/white"
-        android:text="@string/eTask"
+        android:hint="@string/eTask"
+        android:textColor="@color/blue"
         android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,33 +23,33 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/eJT"
+        android:id="@+id/eJT2"
         android:layout_width="405dp"
         android:layout_height="50dp"
         android:background="@color/white"
-        android:text="@string/eJTask"
+        android:hint="@string/eJTask"
         android:textSize="12pt"
+        android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eMT"
+        app:layout_constraintTop_toBottomOf="@+id/eMT2"
         app:layout_constraintVertical_bias="0.165" />
 
     <TextView
-        android:id="@+id/eTimeT"
+        android:id="@+id/eTimeT2"
         android:layout_width="401dp"
         android:layout_height="56dp"
         android:background="@color/white"
-        android:text="@string/eTimeTask"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white"
+        android:hint="@string/eTimeTask"
+        android:textColor="@color/blue"
         android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eMT"
+        app:layout_constraintTop_toBottomOf="@+id/eMT2"
         app:layout_constraintVertical_bias="0.412" />
 
     <TextView
